# landing

./: .dockerignore  .eslintrc  .gitignore  .madgerc  .prettierignore  .stylelintrc  200.html  404.html  CNAME  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __stand.html  asset-manifest.json  components.html  config-overrides.js  design.html  es.html  gravity-ui-uikit-themer-1.1.0.tgz  gravity-ui-uikit-themer-1.2.0.tgz  icons.html  index.html  libraries.html  manifest.json  next-i18next.config.js  next-sitemap.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  robots.txt  rtl.html  ru.html  sitemap-0.xml  sitemap.xml  themer.html  tsconfig.json  tsconfig.tsbuildinfo  (+1 more)
.storybook/: main.ts  preview.ts  theme.ts
ai-adoption-plan/: README.md  agent-skill.md  consumer-agents-md.md  context7.md  docs-in-npm.md  evals-baseline.md  llms-analytics.md  mcp-server.md  md-endpoints.md  package-llms-txt.md  packages-inventory.md  readme-template.md  recipes.md  root-llms-txt.md  starter-templates.md
components/: date-components.html  navigation.html  uikit.html
demo/: Landing.stories.tsx
design/: branding.html  guides.html
e2e/: home.spec.ts  theme-card-previews.spec.ts
es/: components.html  (+4 more)
services/icon-search/: .gitignore  Dockerfile  pyproject.toml
services/icon-search/app/: config.py  main.py  model.py
services/icon-search/data/: embeddings.npy  icon_index.json
services/icon-search/icon_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/icon-search/scripts/: compute_embeddings.py  render_svgs.py
(+9017 files in other folders)
