[project]
name = "icon-search"
version = "0.1.0"
description = "Scripts for precomputing CLIP icon embeddings"
requires-python = ">=3.11"
dependencies = [
    "open-clip-torch>=2.29.0",
    "torch>=2.5.0",
    "Pillow>=11.0.0",
    "numpy>=2.0.0",
    "cairosvg>=2.7.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
